--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <title>g3 ar</title>
     <link rel="stylesheet" href="styles/g3.css">
 </head>
-<body>
+<body class="work-sans-font">
     <header>
-
+        <nav class="navbar">
+            <h3 class="brand">
+                G3 Architeets
+            </h3>
+        </nav>
     </header>
     <main>
 
