--- a/index.html
+++ b/index.html
@@ -7,15 +7,52 @@
     <link rel="stylesheet" href="styles/g3.css">
 </head>
 <body class="work-sans-font">
-    <header>
-        <nav class="navbar">
+    <header class="bg-light">
+        <nav class="navbar display-flex">
             <h3 class="brand">
                 G3 Architeets
             </h3>
+            <ul class="nav-links display-flex">
+              <li class="nav-item"><a href="" class="nav-link text-gray">Home</a></li>
+              <li class="nav-item"><a href="" class="nav-link text-gray">About</a></li>
+              <li class="nav-item"><a href="" class="nav-link text-gray">Contact us</a></li>
+              <li class="nav-item"><a href="" class="nav-link text-gray">login</a></li>
+            </ul>
         </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-title">Brand New Group of Architects </h1>
+            <p class="banner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, perferendis! Omnis dolores consectetur consequuntur itaque molestias earum, commodi vitae veritatis recusandae iure illo facilis dolorum neque placeat quam tenetur ipsum!</p>
+            <button class="btn-primary">Explore more</button>
+            </div>
+            <img class="banner-img" src="images/banner.png" alt="">
+        </div>
     </header>
     <main>
+        <!-- teams section start -->
+        <section class="teams display-flex">
+            <div class="team-imgs">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+             <img src="images/team4.png" alt="">
+            </div>
+            <div class="our-features">
+                <h3 class="section-title"> <span id="quick-list" class="text-light-gray">Quick list</span> <span>of our</span> <span class="text-primary">Feature</span></h3>
+                <p class="feature-description text-light-gray">
+                    There are many variations of passages of Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quasi eveniet minima tempora, iure impedit deleniti voluptatem ea itaque. Quos,</p>
+                <button class="btn-primary">Explore more</button>
+            </div>
+        </section>
+        <!-- features will enjoy -->
+         <section>
+            <h3 class="section-title">Some Facts</h3>
+         </section>
 
+         <!-- some facts -->
+          <section class="some-facts">
+
+          </section>
     </main>
     <footer>
 
