--- a/index.html
+++ b/index.html
@@ -47,10 +47,39 @@
         <!-- features will enjoy -->
          <section>
             <h3 class="section-title">Some Facts</h3>
+            <p class="text-light-gray fact-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
          </section>
 
          <!-- some facts -->
-          <section class="some-facts">
+          <section class="facts-container">
+            <div class="fact-card display-flex">
+                <div>
+                    <img src="images/icons/ribon.png" alt="" class="fact-icon">
+                <h4 class="fact-number">54</h4>
+                <h5 class="fact-name">Awards Winning</h5>
+                </div>
+            </div>
+            <div class="fact-card display-flex">
+                <div>
+                    <img src="images/icons/projects.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">1458</h4>
+                    <h5 class="fact-name">Project finish</h5>
+                </div>
+            </div>
+            <div class="fact-card display-flex">
+                <div>
+                    <img src="images/icons/customers.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">590</h4>
+                    <h5 class="fact-name">Clients work</h5>
+                </div>
+            </div>
+            <div class="fact-card display-flex">
+                <div>
+                    <img src="images/icons/email.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">22578</h4>
+                    <h5 class="fact-name">Email send</h5>
+                </div>
+            </div>
 
           </section>
     </main>
