--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div>
                 <img src="images/architect.png" alt="">
                 <button id="experience-badge" class="btn-primary">
-                    <span id="experience-year">10+yeare</span>
+                    <span id="experience-year">10+Year</span>
                     <br>
                     <span>Experience</span>
                 </button>
